# Perceptor

./: .gitmodules  README.md
BeagleBoneBlack/: README.md  SetupFromLinuxImage.sh
BeagleBoneBlack/Configurations/: .config_beaglebone_black_hdmi
LaTeXpdfsDocs/: ImageProcessingAndMoreCUDA.tex
Scripts/: BuildOpenCVWithCUDACppOnly.sh  BuildOpenCVWithCUDAFedora.sh  BuildOpenCVWithCUDAUbuntu.sh  CudaEnvironmentVariableSetup.sh  mastering_embedded_linux_examples.sh  toolchain_setup.sh
Source/: CMakeLists.txt
Source/Executables/: CMakeLists.txt  DisplayImage.cpp
Source/UnitTests/: CMakeLists.txt
Source/UnitTests/CUDAToolkit/: MemoryManagement_tests.cu
Source/UnitTests/OpenCV/: ReadImageTests.cpp
projects/: README.md
projects/stellaris-lm3s-mcu/: Cargo.toml  README.md
projects/stellaris-lm3s-mcu/src/: main.rs
